@@ -1,3 +1,9 @@
+2009-03-04  Callum McKenzie  <callum@spooky-possum.org>
+
+	* applet.c (gnome_volume_applet_refresh): Move the dock update
+	code to be in sync with the icon update code. Bug 573924. Fixes
+	problems like bug 573924.
+
 ==================== 2.25.92 ======================
 
 2009-02-17  Luca Ferretti  <elle.uca@libero.it>
